compositor: release the buffer of textures again when attempting direct scanout

Otherwise the client can freeze, which happens with Chromium since
31734142fb57dc67a7ceb1173323fedf013f58bf. We still avoid deleting the texture
though, to allow caching of things like multi-GPU copy swapchains.

BUG: 521960