src/scene/opengl/texture.h
@@ -41,6 +41,7 @@ public:
 
     bool upload(const QImage &image);
     void upload(const QImage &image, const Rect &region) override;
+    void releaseBuffer() override;
 };
 
 class BufferTextureOpenGL : public TextureOpenGL
@@ -52,6 +53,7 @@ public:
 
     bool attach(GraphicsBuffer *buffer, const std::shared_ptr<SyncReleasePoint> &releasePoint);
     void attach(GraphicsBuffer *buffer, const Region &region, const std::shared_ptr<SyncReleasePoint> &releasePoint) override;
+    void releaseBuffer() override;
 
     void upload(const QImage &image, const Rect &region) override;
 
