src/scene/texture.h
@@ -29,6 +29,7 @@ public:
 
     virtual void attach(GraphicsBuffer *buffer, const Region &region, const std::shared_ptr<SyncReleasePoint> &releasePoint) = 0;
     virtual void upload(const QImage &image, const Rect &region) = 0;
+    virtual void releaseBuffer() = 0;
 
 protected:
     Texture();
